--- a/linux/linux.html
+++ b/linux/linux.html
@@ -77,7 +77,7 @@
             <b>G</b>
             <ul type="disc">
               <li>
-              <a href="#vim">g</a>
+              <a href="#git">git</a>
               </li>
             </ul>
 
@@ -6464,116 +6464,68 @@ Allow from all
 <br>tightvncserver -kill :1
 <br>
 <br>
-    <br> <h1> Pfsense</h1>
+<br> <h1> Pfsense</h1>
 <br>
-        <br><h1>Git</h1>
-        Если вы что-то поменяли и вам надо отправить что-то в удлаённый  репозиторий сделайте  в корне локального репозитория три команды: <br>
-        1. ? <br>
-        | click me | click me | <br>
-        | 1 | git add . | <br>
-
-        -- прямо вот так с точкой через пробел, позволит добавить в индекс  репозитория новые файлы, которые вы создали и которых не было в  предыдущей фиксации (коммите) <br>
-        <br>
-        2. ? <br>
-        | click me | click me | <br>
-        | 1 | git commit -m "текст сообщения о том, что вы изменили" | <br>
-        <br>
-        -- очередная фиксация этапа разработки. <br>
-        <br>
-        3. ? <br>
-        | click me | click me | <br>
-        | 1 | git push | <br>
-        <br>
-        -- именно это команда отправит ваши изменения в удалённый репозиторий. <br>
-        <br>
-        <br>
-        Вам надо забрать что-то из внешней репы <br>
-        Если нужно забрать что-то из внешнего репозитория  (например, коллеги  что-то поправили и просят вам подтянуть изменения), то делаем гит пулл (подробности тут): <br>
-        ? <br>
-        | click me | click me | <br>
-        | 1 | git pull | <br>
-        <br>
-        -- это команда подтянет изменения в вашу текущую ветку, из той ветки внешнего репозитория, которая с ней ассоциирована. <br>
-        <br>
-        <br>
-        <br>
-        Имя пользователя <br>
-        $ git config --global user.name "John Doe" <br>
-        $ git config --global user.email johndoe@example.com <br>
-        <br>
-        <br>
-        Проверка настроек <br>
-        $ git config --list <br>
-        $ git config user.name <br>
-        <br>
-        Как получить помощь? <br>
-        $ git help глагол <br>
-
-            <br>
-
-            <br>
-            Определение состояния файлов <br>
-            $ git status <br>
-            <br>
-
-            Отслеживание новых файлов <br>
-            $ git add README <br>
-
-            <br>
-
-            Сокращенный вывод статуса <br>
-
-            $ git status -s <br>
-            <br>
-
-            <br>  Мердж ветки в мастер
-            <br>  Выполняется после завершения работы над своей веткой при помощи команды git merge. Чтобы вмерджить ветку в мастер, нужно сначала перейти в мастер, а затем выполнить git merge branch_name.
-
-        <br>  $ git checkout master
-        <br>  $ git merge home
-      <br>    И не забываем запушить изменения
-        <br>  $ git push origin master
-        <br>  Как вмерджить мастер в свою ветку
-  <br>Сначала идем в мастер, подтягиваем изменения с сервера, то есть делаем git pull. Затем переключаемся в свою ветку и делаем git merge master
-      <br>$ git checkout home
-      <br>$ git merge master
-
-
-
-            Игнорирование файлов <br>
-            $ cat .gitignore <br>
-            *.[oa] <br>
-            *~ <br>
-
-
-            <br>
-            Просмотр индексированных и неиндексированных изменений <br>
-            $ git diff <br>
-            <br>
-            Эта команда сравнивает ваши индексированные изменения с последним коммитом:
-            $ git diff --staged <br>
-
-            <br>
-
-            Коммит изменений <br>
-            $ git commit <br>
-            <br>
-            или <br>
-            $ git commit -m "Story 182: Fix benchmarks for speed" <br>
-            <br>
-            Добавление параметра -a в команду git commit заставляет Git автоматически индексировать каждый уже отслеживаемый на момент коммита файл, позволяя вам обойтись без git add:
-            $ git commit -a -m 'added new benchmarks'
-            <br>
-
-
-            Удаление файлов <br>
-            $ rm PROJECTS.md
-            <br>
-            $ git rm PROJECTS.md
-            <br>
-            это удалить файл из индекса, оставив его при этом в рабочем каталоге. Другими словами, вы можете захотеть оставить файл на жёстком диске, и убрать его из-под бдительного ока  <br>
-            <br>
-            git rm --cached README <br>
+<br> <h1><a name="git"></a>GIT</h1>
+<br>
+<br>$ git add .
+<br>--позволит добавить в индекс  репозитория новые файлы, которые вы создали и которых не было в  предыдущей фиксации (коммите) <br>
+<br>Если надо отменить файлы которые добавили c помощью add
+<br>$ git reset
+<br>$ git commit -m "текст сообщения о том, что вы изменили" | <br>
+<br>Добавление параметра -a в команду git commit заставляет Git автоматически индексировать каждый уже отслеживаемый на момент коммита файл, позволяя вам обойтись без git add:
+<br>$ git commit -a -m 'added new benchmarks'
+<br>
+<br>git push
+<br>-- это команда отправит ваши изменения в удалённый репозиторий.
+<br>Вам надо забрать что-то из внешней репы
+<br>Если нужно забрать что-то из внешнего репозитория  (например, коллеги  что-то поправили и просят вам подтянуть изменения), то делаем гит пулл (подробности тут): <br>
+<br>
+<br> git pull
+<br>-- это команда подтянет изменения в вашу текущую ветку, из той ветки внешнего репозитория, которая с ней ассоциирована. <br>
+<br>Имя пользователя
+<br>$ git config --global user.name "John Doe"
+<br>$ git config --global user.email johndoe@example.com
+<br>
+<br>Проверка настроек
+<br>$ git config --list
+<br>$ git config user.name
+<br>
+<br>Как получить помощь?
+<br>$ git help глагол
+<br>
+<br>Определение состояния файлов
+<br>$ git status
+<br>
+<br>Сокращенный вывод статуса
+<br>$ git status -s
+<br>
+<br>  Мердж ветки в мастер
+<br>  Выполняется после завершения работы над своей веткой при помощи команды git merge. Чтобы вмерджить ветку в мастер, нужно сначала перейти в мастер, а затем выполнить git merge branch_name.
+<br>  $ git checkout master
+<br>  $ git merge home
+<br>    И не забываем запушить изменения
+<br>  $ git push origin master
+<br>  Как вмерджить мастер в свою ветку
+<br>Сначала идем в мастер, подтягиваем изменения с сервера, то есть делаем git pull. Затем переключаемся в свою ветку и делаем git merge master
+<br>$ git checkout home
+<br>$ git merge master
+<br>Игнорирование файлов
+<br>$ cat .gitignore
+<br>
+<br>Просмотр индексированных и неиндексированных изменений
+<br>$ git diff <br>
+<br>команда сравнивает ваши индексированные изменения с последним коммитом:
+<br>$ git diff --staged
+<br>
+<br>Удаление файлов <br>
+<br> $ rm PROJECTS.md
+<br>
+<br>$ git rm PROJECTS.md
+<br>
+<br>это удалить файл из индекса, оставив его при этом в рабочем каталоге.
+<br>Другими словами, вы можете захотеть оставить файл на жёстком диске, и убрать его из-под бдительного ока
+<br>git rm --cached README
 
 
     <h1>Сететвой интерфейс eth0 отпадает когда перезапускаешь сеть помогает только перезагрузка</h1>
