--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <br>   Начал писать 5 апреля 2011 года.<br>
       <br>   Заметки  в web 02.06.2012 года<br>
       <br>   Заметки  в Git 07.12.2014 года <br>
-      <br>   Заметки через Atom 05.01.2021 года 
+      <br>   Заметки через Atom 05.01.2021 года
       <br>
       <br>
 <!--Содержание -->
@@ -23,5 +23,5 @@
 </p>
 <p><a href="http://vosagh82.github.io/windows/windows.html">windows</a>
 </p>
-<p><a href="http://vosagh82.github.io/python/Python_help.html">pyton</a>
+<p><a href="http://vosagh82.github.io/python/MyBook/index.html">pyton</a>
 </p>
