--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
 </p>
 <p><a href="http://vosagh82.github.io/windows/windows.html">windows</a>
 </p>
-<p><a href="http://vosagh82.github.io/python/MyBook/index.html">pyton</a>
+<p><a href="http://vosagh82.github.io/python/vosagh82.github.io--python_HTML/index.html">pyton</a>
 </p>
